API Gateway commit 1